the form actually works now lol

--- a/index.html
+++ b/index.html
@@ -233,17 +233,15 @@
 
                 </div>
                 <div class="right-side-form">
-                    <form action="" id="form1" class="form-style">
+                    <form action="https://formsubmit.co/d5a088a194551b3e3ecd9dee68b223e6" method="POST" id="form1" class="form-style">
                         <label for="name">Name</label>
-                        <input type="text" id="name" placeholder="ex-Nischal Gautam" required class="input-form">
+                        <input type="text" name="SenderName" id="name" placeholder="ex-Nischal Gautam" required class="input-form">
 
                         <label for="email">E-Mail</label>
-                        <input type="text" name="" id="email" placeholder="ex-xyz@gmail.com" required
-                            class="input-form">
+                        <input type="email" name="email" id="email" placeholder="ex-xyz@gmail.com" required class="input-form">
 
                         <label for="message">Message</label>
-                        <textarea name="message" id="messageInput" cols="" rows="8" class="input-form"
-                            style="color: black;">Your Message...</textarea>
+                        <textarea name="message" id="messageInput" cols="" rows="8" class="input-form" style="color: black;">Your Message...</textarea>
 
                         <button type="submit" id="sendButton">Send <span>&#8599;</span></button>
 
